// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Tel renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX dATUnL"
      disabled={true}
    >
      <label
        className="sc-gmSHEY coDCGe"
      >
        medium
      </label>
      <input
        className="sc-goMRkL JOvHL"
        disabled={true}
        placeholder=" "
        type="tel"
        value="+372 123 4567"
      />
      <p
        className="sc-VcoSR dKUTwy"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX dATUnL"
      disabled={true}
    >
      <label
        className="sc-gmSHEY coDCGe"
      >
        large
      </label>
      <input
        className="sc-goMRkL gsTWKg"
        disabled={true}
        placeholder=" "
        type="tel"
        value="+372 123 4567"
      />
      <p
        className="sc-VcoSR dKUTwy"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX dATUnL"
      disabled={true}
    >
      <div
        className="sc-jNrqiC jBcQib"
      >
        <input
          className="sc-goMRkL crpHmu"
          disabled={true}
          placeholder=" "
          type="tel"
          value="+372 123 4567"
        />
        <label
          className="sc-glUVip fKjLAb"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-VcoSR dKUTwy"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX kRgGLt"
    >
      <label
        className="sc-gmSHEY coDCGe"
      >
        medium
      </label>
      <input
        className="sc-goMRkL kDWyPF"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="sc-VcoSR jatpWO"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX kRgGLt"
    >
      <label
        className="sc-gmSHEY coDCGe"
      >
        large
      </label>
      <input
        className="sc-goMRkL fWoZBG"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="sc-VcoSR jatpWO"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX kRgGLt"
    >
      <div
        className="sc-jNrqiC jBcQib"
      >
        <input
          className="sc-goMRkL cHypwM"
          placeholder="e.g. +372 123 4567"
          type="tel"
        />
        <label
          className="sc-glUVip fKjLAb"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-VcoSR jatpWO"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX kRgGLt"
    >
      <label
        className="sc-gmSHEY coDCGe"
      >
        medium
      </label>
      <input
        className="sc-goMRkL JOvHL"
        placeholder=" "
        readOnly={true}
        type="tel"
        value="+372 123 4567"
      />
      <p
        className="sc-VcoSR dKUTwy"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX kRgGLt"
    >
      <label
        className="sc-gmSHEY coDCGe"
      >
        large
      </label>
      <input
        className="sc-goMRkL gsTWKg"
        placeholder=" "
        readOnly={true}
        type="tel"
        value="+372 123 4567"
      />
      <p
        className="sc-VcoSR dKUTwy"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX kRgGLt"
    >
      <div
        className="sc-jNrqiC jBcQib"
      >
        <input
          className="sc-goMRkL crpHmu"
          placeholder=" "
          readOnly={true}
          type="tel"
          value="+372 123 4567"
        />
        <label
          className="sc-glUVip fKjLAb"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-VcoSR dKUTwy"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX kRgGLt"
    >
      <label
        className="sc-gmSHEY coDCGe"
      >
        medium
      </label>
      <input
        className="sc-goMRkL JOvHL"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="sc-VcoSR dKUTwy"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX kRgGLt"
    >
      <label
        className="sc-gmSHEY coDCGe"
      >
        large
      </label>
      <input
        className="sc-goMRkL gsTWKg"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="sc-VcoSR dKUTwy"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX kRgGLt"
    >
      <div
        className="sc-jNrqiC jBcQib"
      >
        <input
          className="sc-goMRkL crpHmu"
          placeholder="e.g. +372 123 4567"
          type="tel"
        />
        <label
          className="sc-glUVip fKjLAb"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-VcoSR dKUTwy"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX kRgGLt"
    >
      <label
        className="sc-gmSHEY coDCGe"
      >
        medium
      </label>
      <input
        className="sc-goMRkL JOvHL"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX kRgGLt"
    >
      <label
        className="sc-gmSHEY coDCGe"
      >
        large
      </label>
      <input
        className="sc-goMRkL gsTWKg"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX kRgGLt"
    >
      <div
        className="sc-jNrqiC jBcQib"
      >
        <input
          className="sc-goMRkL crpHmu"
          placeholder="e.g. +372 123 4567"
          type="tel"
        />
        <label
          className="sc-glUVip fKjLAb"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX kRgGLt"
    >
      <label
        className="sc-gmSHEY coDCGe"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-goMRkL JOvHL"
        dir="rtl"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX kRgGLt"
    >
      <label
        className="sc-gmSHEY coDCGe"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-goMRkL gsTWKg"
        dir="rtl"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX kRgGLt"
    >
      <div
        className="sc-jNrqiC jBcQib"
      >
        <input
          className="sc-goMRkL crpHmu"
          dir="rtl"
          placeholder="e.g. +372 123 4567"
          type="tel"
        />
        <label
          className="sc-glUVip fQRjhM"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX kRgGLt"
    >
      <input
        className="sc-goMRkL JOvHL"
        placeholder="medium"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX kRgGLt"
    >
      <input
        className="sc-goMRkL gsTWKg"
        placeholder="large"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX kRgGLt"
    >
      <div
        className="sc-jNrqiC jBcQib"
      >
        <input
          className="sc-goMRkL dVjUZr"
          placeholder="xlarge"
          type="tel"
        />
        <label
          className="sc-glUVip fKjLAb"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX kRgGLt"
    >
      <label
        className="sc-gmSHEY coDCGe"
      >
        medium
      </label>
      <input
        className="sc-goMRkL hWBUEc"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="sc-VcoSR dKUTwy"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX kRgGLt"
    >
      <label
        className="sc-gmSHEY coDCGe"
      >
        large
      </label>
      <input
        className="sc-goMRkL gTNnSf"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="sc-VcoSR dKUTwy"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-iOnGvX kRgGLt"
    >
      <div
        className="sc-jNrqiC hjjcDo"
      >
        <input
          className="sc-goMRkL crpHmu"
          placeholder="e.g. +372 123 4567"
          type="tel"
        />
        <label
          className="sc-glUVip fKjLAb"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-VcoSR dKUTwy"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
